apps/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - argocd.lab.axiomlayer.com
    secretName: argocd-tls
  rules:
  - host: argocd.lab.axiomlayer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-helm-server
            port:
              number: 80
